# spotifytrack

./: .gitattributes  Justfile  LICENSE  README.md  package.json  planning.txt  tsconfig.json  vercel.json
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile
backend/migrations/2019-04-30-070208_initialize/: down.sql  up.sql
backend/migrations/2020-08-26-060437_spotify-id-indices/: down.sql  up.sql
backend/migrations/2020-09-05-213941_playlist-creation-perms/: down.sql  up.sql
backend/migrations/2020-12-01-213835_better-snapshot-indices/: down.sql  up.sql
backend/migrations/2021-05-19-025123_related_artists/: down.sql  up.sql
backend/migrations/2023-05-10-092019_external_data_retrieved/: down.sql  up.sql
backend/migrations/2023-11-27-102309_user-last-view-date/: down.sql  up.sql
backend/migrations/2023-11-28-005826_user-last-external-data-store-timestamp/: down.sql  up.sql
backend/migrations/2024-10-08-195421_artists-genres-id-bigint/: down.sql  up.sql
backend/src/: benchmarking.rs  cache.rs  conf.rs  cors.rs  db_util.rs  main.rs  metrics.rs  schema.rs  scraper.rs  shared_playlist_gen.rs  spotify_api.rs  spotify_token.rs  stats.rs
backend/src/artist_embedding/: map_3d.rs  mod.rs
backend/src/cache/: local_cache.rs  mod.rs
backend/src/external_storage/: download.rs  mod.rs  upload.rs
backend/src/models/: mod.rs
backend/src/routes/: mod.rs
frontend/: .eslintrc  .gitignore  .prettierrc  Justfile  README.md  artist-averager.hbs  artist-averager.html  graph-standalone.hbs  graph.html  index.d.ts  index.hbs  index.html  music-galaxy.hbs  music-galaxy.html  package.json  tsconfig.json  vite.config.ts  webpack.config.js  webpack.prod.js
frontend/src/: Cards.scss  Cards.tsx  _style.js  colors.scss  conf.ts  graphStandalone.css  graphStandalone.tsx  index.d.ts  index.scss  index.tsx  sentry.ts  style.ts  styleConstants.ts  types.ts  util.tsx  util2.ts  webcola.d.ts
frontend/src/Cards/: ArtistCard.tsx  Cards.scss  ImageBox.tsx  TrackCard.tsx  index.tsx
frontend/src/api/: api.ts
frontend/src/artistAverager/: AverageArtistsListing.scss  AverageArtistsListing.tsx  Root.tsx  SimilarityBar.css  SimilarityBar.scss  SimilarityBar.tsx  SubmitButton.css  SubmitButton.scss  SubmitButton.tsx  api.ts  index.css  index.scss  index.tsx
frontend/src/artistAverager/ArtistInput/: ArtistInput.css  ArtistInput.scss  AutocompleteDropdown.tsx  index.tsx
frontend/src/artistAverager/ArtistMap/: ArtistMap.tsx  ArtistMapInst.ts  DataFetchClient.ts  MovementInputHandler.ts  MusicManager.ts  OverlayUI.scss  OverlayUI.tsx  conf.ts  lazyThree.ts
frontend/src/artistAverager/ArtistMap/OverlayUI/: ArtistSearch.scss  ArtistSearch.tsx  CheatSheet.scss  CheatSheet.tsx  OnboardingSidebar.scss  OnboardingSidebar.tsx  OverlayUI.scss  OverlayUI.tsx
frontend/src/artistAverager/ArtistMap/WasmClient/: WasmClient.worker.ts
frontend/src/artistAverager/ArtistMap/WasmClient/wasm_engine/: Cargo.toml  Justfile
frontend/src/artistAverager/ArtistMap/WasmClient/wasm_engine/src/: lib.rs  partitioning.rs
frontend/src/components/: BigButton.scss  Charts.tsx  Compare.css  Compare.scss  Compare.tsx  DayStats.tsx  Footer.scss  Footer.tsx  GenresTreemap.css  GenresTreemap.tsx  LineChart.tsx  Loading.css  Loading.js  Loading.tsx  OAuthRedirect.tsx  RelatedArtistsGraph.scss  RelatedArtistsGraph.tsx  ShareIcons.css  ShareIcons.tsx  Timeline.css  Timeline.scss  Timeline.tsx  Tooltip.css  Tooltip.tsx
frontend/src/components/RelatedArtistsGraph/: CanvasRenderer.ts  RelatedArtistsGraph.css  RelatedArtistsGraph.scss  RelatedArtistsGraph.tsx  conf.ts  index.ts
frontend/src/musicGalaxy/: About.scss  About.tsx  ArtistMap.tsx  ArtistMapInst.ts  DataFetchClient.ts  MovementInputHandler.ts  MusicManager.ts  api.ts  conf.ts  index.css  index.tsx  lazyThree.ts  name_ideas.txt
frontend/src/musicGalaxy/OverlayUI/: ArtistSearch.scss  ArtistSearch.tsx  CheatSheet.css  CheatSheet.scss  CheatSheet.tsx  OnboardingSidebar.css  OnboardingSidebar.scss  OnboardingSidebar.tsx  OverlayUI.scss  OverlayUI.tsx  VolumeAndReturnToOrbitModeControls.scss  VolumeAndReturnToOrbitModeControls.tsx
frontend/src/musicGalaxy/WasmClient/: .gitignore  WasmClient.worker.ts
frontend/src/musicGalaxy/WasmClient/wasm_engine/: Cargo.toml  Justfile
frontend/src/pages/: ArtistStats.css  ArtistStats.scss  ArtistStats.tsx  CompareLanding.scss  CompareLanding.tsx  CompareToLanding.css  CompareToLanding.scss  CompareToLanding.tsx  GenreStats.css  GenreStats.scss  GenreStats.tsx  Home.css  Home.scss  Home.tsx  Stats.css  Stats.scss  Stats.tsx  home.tsx  stats.tsx
frontend/src/store/: index.tsx  selectors.ts
frontend/src/store/actions/: userStats.ts
frontend/src/store/reducers/: userStats.ts
frontend/src/util/: hooks.ts  index.ts
frontend/static/: index.css  index.hbs
github/workflows/: automerge-vercel.yml
research/: .gitignore  Justfile  README.md  comparisons.md  runs.txt  spotify_related_artists_embedding.ipynb  standalone 8 dims loading + testing.ipynb
(+2 files in other folders)
