[package]
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2021"
name = "spotify-homepage-backend"
version = "0.1.0"

[profile.release]
debug = true

[[bin]]
name = "spotify-homepage-backend"
path = "src/main.rs"

[dependencies]
base64 = "0.22"

chrono = { version = "0.4", features = ["serde"] }

diesel = { version = "2.2", features = ["chrono", "mysql"] }

dotenv = "0.15.0"

float-ord = "0.3"

fnv = "1.0"

futures = "0.3"
tokio = { version = "1.6.1", features = ["rt", "rt-multi-thread", "macros", "parking_lot"] }

lazy_static = "1.4.0"

foundations = { version = "3.2", default-features = false, features = ["metrics", "jemalloc", "telemetry-server", "tokio-runtime-metrics"] }

rand = "0.8"

r2d2_redis = "0.14"

redis = { version = "0.20" }

reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "zstd"] }

rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "786db9b832b7edd91f143b24835677c69121a9bb", features = ["json"] }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "786db9b832b7edd91f143b24835677c69121a9bb", features = ["diesel_mysql_pool"]}

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

parquet = { version = "52.0", default-features = false, features = ["arrow", "async", "flate2", "object_store"] }
arrow-schema = { version = "52.0", default-features = false, features = [] }
arrow-array = { version = "52.0", default-features = false, features = [] }
object_store = { version = "0.10", features = ["aws"] }

dashmap = "6.0"
