[package]
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2021"
name = "spotify-homepage-backend"
version = "0.1.0"

[profile.release]
debug = true

[[bin]]
name = "spotify-homepage-backend"
path = "src/main.rs"

[dependencies]
base64 = "0.22"

chrono = { version = "0.4", features = ["serde"] }

diesel = { version = "2.2", features = ["chrono", "mysql"] }

dotenv = "0.15.0"

float-ord = "0.3"

fnv = "1.0"

futures = "0.3"
tokio = { version = "1.43.1", features = ["rt", "rt-multi-thread", "macros", "parking_lot"] }

lazy_static = "1.4.0"

foundations = { version = "5.4", default-features = false, features = ["metrics", "jemalloc", "telemetry-server", "tokio-runtime-metrics", "logging"] }

rand = "0.9"

r2d2 = "0.8"

redis = { version = "1.0", features = ["r2d2"] }

reqwest = { version = "0.13", features = ["json", "gzip", "brotli", "deflate", "zstd", "form"] }

rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_mysql_pool"] }

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

parquet = { version = "57.3", default-features = false, features = ["arrow", "async", "flate2", "flate2-rust_backened", "object_store"] }
arrow-schema = { version = "57.3", default-features = false, features = [] }
arrow-array = { version = "57.3", default-features = false, features = [] }
object_store = { version = "0.12", features = ["aws"] }

dashmap = "6.0"
